feat: added header/nav-bar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,32 @@
     <title>Struttuta Discord</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
+    <!-- HEADER -->
+    <header class="header">
+        <nav class="nav-container">
+            <div class="flex-nav">
+                <div class="logo">Logo</div>
+                <div class="link-container">
+                    <a href="">Link</a>
+                    <a href="">Link</a>
+                    <a href="">Link</a>
+                    <a href="">Link</a>
+                </div>
+                <div class="login">Login</div>
+            </div>
+
+        </nav>
+    </header>
+    <!-- FINE HEADER -->
+
+    <!-- MAIN -->
+    <!-- FINE MAIN -->
+
+    <!-- FOOTER -->
+    <footer class="footer"></footer>
+    <!-- FINE FOOTER -->
 </body>
+
 </html>
