feat: added sezione in evidenza

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
     </header>
     <!-- FINE HEADER -->
 
+    <!-- SEZIONE IN EVIDENZA -->
+    <section class="in-evidenza">
+        <div class="pinkbox"></div>
+
+    </section>
+    <!-- FINE SEZIONE IN EVIDENZA -->
+
     <!-- MAIN -->
     <!-- FINE MAIN -->
 
