fix:fixed html and css error

--- a/index.html
+++ b/index.html
@@ -37,11 +37,54 @@
     <!-- FINE SEZIONE IN EVIDENZA -->
 
     <!-- MAIN -->
+    <!-- 1° BLOCCO -->
+    <section class="blocks flex p-30 h200">
+        <div class="container flex row-reverse">
+            <div class="two-col-1"></div>
+            <div class="two-col-2"></div>
+        </div>
+    </section>
+    <!-- 2 blocco -->
+    <section class="blocks flex p-30 bg-grey h200">
+        <div class="container flex">
+            <div class="two-col-1"></div>
+            <div class="two-col-2"></div>
+        </div>
+    </section>
+    <!-- 3° BLOCCO -->
+    <section class="blocks flex p-30 h200">
+        <div class="container flex row-reverse ">
+            <div class="two-col-1"></div>
+            <div class="two-col-2"></div>
+        </div>
+    </section>
+    <!-- 4° BLOCCO -->
+    <section class="blocks flex p-30 bg-grey h-350">
+        <div class="container bg-dgreen">
+        </div>
+    </section>
     <!-- FINE MAIN -->
 
     <!-- FOOTER -->
-    <footer class="footer"></footer>
+    <footer>
+        <div class="container">
+            <div class="footer-top flex">
+                <div class="col-left w-30">
+
+                </div>
+                <div class="col-right w-70 flex">
+                    <div class="five-col"></div>
+                    <div class="five-col"></div>
+                    <div class="five-col"></div>
+                    <div class="five-col"></div>
+                </div>
+            </div>
+    
+            <div class="footer-bottom flex">
+                <div class="footer-logo">lorem</div>
+                <div class="footer-btn">lorem</div>
+            </div>
+        </div>
+    </footer>
     <!-- FINE FOOTER -->
 </body>
-
-</html>
