fix: fixed header and nav bar

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <body>
     <!-- HEADER -->
     <header class="header">
-        <nav class="nav-container">
-            <div class="flex-nav">
-                <div class="logo">Logo</div>
+        <nav class="nav-container container flex">
+            
+                <div class="logo">Lorem ipsum </div>
                 <div class="link-container">
                     <a href="">Link</a>
                     <a href="">Link</a>
                     <a href="">Link</a>
                     <a href="">Link</a>
                 </div>
-                <div class="login">Login</div>
+                <div class="login border">Login</div>
             </div>
 
         </nav>
