feat: removed debug elements

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <nav class="nav-container container flex">
             
-                <div class="logo">Lorem ipsum </div>
+                <div class="logo">Logo </div>
                 <div class="link-container">
                     <a href="">Link</a>
                     <a href="">Link</a>
