fix: fixed html syntax error/ended exercise

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <!-- HEADER -->
     <header class="header">
         <nav class="nav-container container flex">
-            
-                <div class="logo">Logo </div>
-                <div class="link-container">
-                    <a href="">Link</a>
-                    <a href="">Link</a>
-                    <a href="">Link</a>
-                    <a href="">Link</a>
-                </div>
-                <div class="login border">Login</div>
+
+            <div class="logo">Logo </div>
+            <div class="link-container">
+                <a href="">Link</a>
+                <a href="">Link</a>
+                <a href="">Link</a>
+                <a href="">Link</a>
             </div>
+            <div class="login">Login</div>
+
 
         </nav>
     </header>
@@ -31,7 +31,7 @@
 
     <!-- SEZIONE IN EVIDENZA -->
     <section class="in-evidenza">
-        <div class="pinkbox"></div>
+        <div class="pinkbox border"></div>
 
     </section>
     <!-- FINE SEZIONE IN EVIDENZA -->
@@ -79,7 +79,7 @@
                     <div class="five-col"></div>
                 </div>
             </div>
-    
+
             <div class="footer-bottom flex">
                 <div class="footer-logo">lorem</div>
                 <div class="footer-btn">lorem</div>
